--- a/index.html
+++ b/index.html
@@ -16,10 +16,14 @@
     <meta name="theme-color" content="#0e1623" />
 
     <!-- Preconnect to external origins -->
+    <link rel="preconnect" href="https://cdn.jsdelivr.net" crossorigin />
     <link rel="preconnect" href="https://slfshwrgohbhdlsasywo.supabase.co" crossorigin />
     <link rel="dns-prefetch" href="https://slfshwrgohbhdlsasywo.supabase.co" />
     <link rel="preconnect" href="https://www.googletagmanager.com" />
     <link rel="dns-prefetch" href="https://www.googletagmanager.com" />
+
+    <!-- Pretendard Font -->
+    <link rel="stylesheet" as="style" crossorigin href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/variable/pretendardvariable-jp-dynamic-subset.min.css" />
     
     <!-- Apple Touch Icon -->
     <link
